sc3/assets/service-ext-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ext-srv
  labels:
    app: service-ext-app
    service: service-ext-app-srv
spec:
  ports:
    - port: 80
      name: http-80
      targetPort: 8082
  selector:
    app: service-ext-app
