sc3/assets/inbound-to-service-g-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inbound-to-service-g-vs
spec:
  hosts:
    - "*"
  gateways:
    - service-g-gw
  http:
    - match:
        - uri:
            exact: /service-g
      rewrite:
        uri: /
      route:
        - destination:
            host: service-g-srv
            port:
              number: 80
